--- a/comunidade-ligada/pom.xml
+++ b/comunidade-ligada/pom.xml
@@ -67,5 +67,10 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>br.com.comunidadeligada</groupId>
+			<artifactId>ComLig</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
