--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>jade</artifactId>
             <version>3.7</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.ingenias</groupId>
+            <artifactId>jadeTools</artifactId>
+            <version>3.7</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ingenias</groupId>
+            <artifactId>jadeMisc</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
