--- a/comunidade-ligada/pom.xml
+++ b/comunidade-ligada/pom.xml
@@ -28,7 +28,7 @@
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.0</version>
 				<configuration>
-					<path>/</path>
+					<path>/api</path>
 					<additionalConfigFilesDir>${basedir}/src/main/tomcat/conf</additionalConfigFilesDir>
 					<uriEncoding>UTF-8</uriEncoding>
 					<systemProperties>
@@ -71,6 +71,10 @@
 			<groupId>br.com.comunidadeligada</groupId>
 			<artifactId>ComLig</artifactId>
 			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 		</dependency>
 	</dependencies>
 </project>
