--- a/comunidade-ligada/src/main/resources/Application.properties
+++ b/comunidade-ligada/src/main/resources/Application.properties
@@ -4,3 +4,8 @@ spring.h2.console.path=/h2-console
 spring.datasource.url = jdbc:h2:~/test
 spring.datasource.username = sa
 spring.datasource.password = 
+
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.naming.strategy = org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
